--- a/static/main.css
+++ b/static/main.css
@@ -3,6 +3,7 @@
     --color-minor: #9e9994;
     /* --color-background: #040f07; */
     --color-background: #0f0c09;
+    --color-background-two: #221a13;
     --color-hover-background: #ddd6cf;
     --color-greeblies: #83817d;
     --color-sign: #fff;
@@ -34,7 +35,7 @@ body {
     display: flex;
     flex-direction: column;
     box-sizing: border-box;
-    height: calc(100vh - 2em);
+    height: calc(100dvh - 2em);
     overflow: hidden;
 }
 
@@ -51,7 +52,7 @@ a:hover {
     text-decoration: underline;
 }
 
-button, .buttonLight, .buttonDark, .buttonDelete {
+button, .buttonLight, .buttonDark, .buttonDarkInverse, .buttonDelete {
     border: transparent;
     border-radius: var(--primary-radius);
     font-size: 1.0em;
@@ -82,6 +83,15 @@ button, .buttonLight, .buttonDark, .buttonDelete {
 
 .buttonDark:hover {
     background-color: var(--color-hover-background);
+}
+
+.buttonDarkInverse {
+    color: var(--color-major);
+    background-color: var(--color-background);
+}
+
+.buttonDarkInverse:hover {
+    background-color: var(--color-background-two);
 }
 
 .buttonDelete {
@@ -135,7 +145,7 @@ button p, .buttonLight p, .buttonDark p, .buttonDelete p {
 .modalContent {
     width: 90%;
     max-width: 50em;
-    max-height: calc(100vh - 2em);
+    max-height: calc(100dvh - 2em);
     overflow-y: auto;
     position: fixed;
     top: 50%;
