Add RouteViewer controls, start on Route creation

--- a/static/main.css
+++ b/static/main.css
@@ -3,7 +3,8 @@
     --color-minor: #9e9994;
     /* --color-background: #040f07; */
     --color-background: #0f0c09;
-    --color-background-two: #221a13;
+    /* --color-background: #f5c31e; */
+    --color-background-two: #29190a;
     --color-hover-background: #ddd6cf;
     --color-greeblies: #83817d;
     --color-sign: #fff;
