--- a/static/main.css
+++ b/static/main.css
@@ -160,19 +160,20 @@ button p, .buttonLight p, .buttonDark p, .buttonDelete p {
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: 1;
+    z-index: 3;
 }
 
 .modalContent {
     width: 90%;
     max-width: 50em;
     max-height: calc(100dvh - 2em);
-    overflow-y: auto;
+    /* overflow-y: auto; */
+    color: var(--color-major);
     position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    z-index: 2;
+    z-index: 4;
 }
 
 .closeContainer {
